--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -285,7 +285,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <h4>Anh chị đạt đến mục tiêu về hưu sớm như thế nào?</h4>
-<p><u>Jeremy</u>: Khi tôi làm ở Motorola, mỗi xu của tôi đều dùng để trả nợ. Nếu tháng nào tôi dư 10$, tôi sẽ trả thêm 10$ vào khoản nợ tiền học. Tôi có để dành quỹ hưu trí tự nguyện <a href="/huu-ich/tich-luy-6.html">401(k)</a> nhưng tôi lại vay từ đó để mua nhà, khi tôi bán nhà để chuyển đến Seattle thì tôi trả món nợ đó.
+<p><u>Jeremy</u>: Khi tôi làm ở Motorola, mỗi xu của tôi đều dùng để trả nợ. Nếu tháng nào tôi dư 10$, tôi sẽ trả thêm 10$ vào khoản nợ tiền học. Tôi có để dành quỹ hưu trí tự nguyện <a href="/huu-ich/tich-luy-6">401(k)</a> nhưng tôi lại vay từ đó để mua nhà, khi tôi bán nhà để chuyển đến Seattle thì tôi trả món nợ đó.
 <br>Khi tôi đổi chỗ làm, tôi vẫn chưa có nhiều tiền tiết kiệm, nhưng tôi sắp sạch nợ. Ở Microsoft, tôi bắt đầu tiết kiệm nhiều hơn. Tôi đóng vào quỹ 401(k) tối đa và tiết kiệm ngoài quỹ nữa. Sau khi tôi gặp Winnie, chúng tôi quyết định về hưu sớm, chúng tôi bắt đầu đọc nhưng cuốn sách như là "Your Money or Your Life" và tăng dần lên tới mức tiết kiệm 70% thu nhập. Trong hai năm làm việc cuối cùng, chúng tôi hầu như chuyển hết thu nhập vào tài khoản đầu tư vì chúng tôi có cổ tức và lãi để sống.
 <br>Chúng tôi sống gần khu đại học nên có thể đi bộ đến mọi nơi cần thiết, vì vậy chúng tôi không cần xe hơi. Tôi đi làm bằng xe đạp, 8-20 dặm mỗi ngày. Chúng tôi mua thực phẩm từ chợ nông dân và mạng tiêu thụ nông sản. Chi tiêu lớn nhất của người ta thường là tiền nhà, tiền đi lại và thực phẩm, chúng tôi đã cắt giảm mạnh ba thứ đó nên chi tiêu hàng tháng của chúng tôi dưới 2000 đô-la.
 <br>Có lẽ tôi đã làm việc nhiều hơn kế hoạch 3 năm, hoặc là chúng tôi đã tiết kiệm quá nhiều. Mục tiêu luôn luôn là đi du lịch, sau khi nghỉ việc, chúng tôi sẽ để một năm rưỡi đi quanh Mexico và Trung Mỹ, sau đó về Đài Loan để sinh con.</p>
@@ -469,19 +469,19 @@ data-ad-slot="3830899615">
 <ol><li>Hai vợ chồng có một mục đích rõ ràng và mọi quyết định đều hướng tới mục đích đó. Mục đích là về hưu sớm để đi du lịch nên quyết định không mua nhà, không ở nhà lớn hơn nhu cầu, chọn nơi ở thuận tiện để không cần xe hơi, đỡ tốn tiền xăng và để xe.<br />
 Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết định để dành bao nhiêu phần thu nhập cho việc đó.</li>
 <li>Tuy quyết định của họ đúng về tài chính nhưng hơi dở về sinh học khi sinh con trễ. Và đứa con sẽ ảnh hưởng đến cách sống của cha mẹ, có thể họ sẽ ít du lịch hơn, mặc dù vẫn có thừa tiền để du lịch.</li>
-<li>Hai vợ chồng trở nên giàu có mà không cần phải làm chủ, làm doanh nhân, chỉ cần biết tận dụng những công cụ tài chính để tối đa hoá kết quả tiết kiệm: dùng chính sách tạm miễn thuế thu nhập cá nhân khi gửi tiền vào <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">quỹ hưu trí tự nguyện</a>, dùng <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> cổ phiếu <a href="/huu-ich/tich-luy-dai-han.html">để tiền dài hạn</a> và quỹ đầu tư trái phiếu để tiền ngắn hạn, chuyển tiền từ quỹ 401(k) sang quỹ Roth IRA để được miễn thuế. Hầu hết những công cụ tài chính đó đều đã có ở Việt Nam.</li>
+<li>Hai vợ chồng trở nên giàu có mà không cần phải làm chủ, làm doanh nhân, chỉ cần biết tận dụng những công cụ tài chính để tối đa hoá kết quả tiết kiệm: dùng chính sách tạm miễn thuế thu nhập cá nhân khi gửi tiền vào <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">quỹ hưu trí tự nguyện</a>, dùng <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> cổ phiếu <a href="/huu-ich/tich-luy-dai-han">để tiền dài hạn</a> và quỹ đầu tư trái phiếu để tiền ngắn hạn, chuyển tiền từ quỹ 401(k) sang quỹ Roth IRA để được miễn thuế. Hầu hết những công cụ tài chính đó đều đã có ở Việt Nam.</li>
 <li>Jeremy rất bình tĩnh khi thị trường cổ phiếu giảm và rất sáng suốt khi không vay tiền để mua cổ phiếu. Cổ phiếu giảm rồi nó sẽ lên lại, người bình tĩnh cứ đưa tiền vào cổ phiếu khi nó giảm.<br />
 Các bạn đừng nghĩ rằng điều này không đúng ở thị trường Việt Nam. Thứ vẫn đúng ở Việt Nam là giá cổ phiếu các công ty tốt như Vinamilk, Vietcombank… có thể giảm nhưng giá trị của công ty vẫn tăng, giá cổ phiếu sẽ tăng lên lại.<br />
 Khi đầu tư vào quỹ đầu tư là chúng ta đầu tư cùng lúc 20-30 công ty. Các bạn đừng lo các công ty đó có thể phá sản. Xác suất để từng công ty đó phá sản trong 10 năm tới là bao nhiêu phần triệu? Xác suất để các công ty đó đồng loạt phá sản là bao nhiêu phần tỉ?</li>
 <li>Hai vợ chồng tính số tiền cần có để về hưu là 25 lần chi tiêu hàng năm. Tính như vậy khá thô sơ, chưa tính đến lạm phát, nhất là khi thời gian về hưu dài đến 40-50 năm. Để tính đến yếu tố lạm phát thì nên dùng công cụ tính toán <a href="/huu-ich/ke-hoach-tai-chinh/">KHTC</a></li>
-<li>Tên trang web GoCurryCracker.com không thể hiện nội dung của nó, cũng như tên trang web <a href="http://www.lhboi.name.vn">www.lhboi.name.vn</a> không thể hiện nội dung hữu ích cho việc làm giàu và tự do tài chính. Cuộc sống khi đã đạt đến mức <a href="/huu-ich/chi-tieu.html">tự do tài chính</a> như hai vợ chồng Jeremy và Winnie rất tuyệt vời.</li>
+<li>Tên trang web GoCurryCracker.com không thể hiện nội dung của nó, cũng như tên trang web <a href="http://www.lhboi.name.vn">www.lhboi.name.vn</a> không thể hiện nội dung hữu ích cho việc làm giàu và tự do tài chính. Cuộc sống khi đã đạt đến mức <a href="/huu-ich/chi-tieu">tự do tài chính</a> như hai vợ chồng Jeremy và Winnie rất tuyệt vời.</li>
 </ol>
 <div class="todisccuss">
 Các bài liên quan:
-<br>* <a href="../dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="../tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
 <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch tài chính để về hưu sớm</a>
-<br>* <a href="../chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132811935500496898" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/427393317426282" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
