--- a/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
+++ b/huu-ich/cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -325,7 +325,7 @@ data-ad-slot="3830899615">
 <p>Chúng tôi đồng ý với nhau rằng: nợ chỉ là <i>sự thiếu kiên nhẫn thể hiện ra thành tiền</i>. Nếu chúng ta mua trả góp thứ gì đó và nói là ta có thể trả hết sau x tháng. Vậy thì nếu chúng ta tiết kiệm x tháng, chúng ta sẽ mua được món đó mà không nợ. Do đó việc mua trả góp là đổi ngày mua, mua ngay thay vì mua sau. Dời ngày mua lên, bạn phải trả nhiều tiền hơn (trả lãi) và tăng nguy cơ trở nên mất khả năng chi trả.<br />
 Ông bà sống rất thanh đạm. Hàng ngày họ đi lại bằng hai chiếc xe cũ hơn 10 năm, lúc họ mua cũng là xe đã dùng. Ga-ra xe của họ có một chiếc xe thể thao Corvette, nhưng họ chỉ lái vài lần trong năm. Đó là một sự nuông chiều bản thân lúc về già, và ông ta cũng mua xe đã dùng, trả ngay hết tiền. Ông ta tự cắt cỏ vườn, tự sửa chữa những hư hỏng trong nhà. Họ ít khi ăn tiệm.</p>
 <h4>Luôn luôn đầu tư</h4>
-<p>Jim không phải là nhà đầu tư lớn nhất thế giới, nhưng từ thời trẻ ông đã đem tiền tiết kiệm đi đầu tư. Ông không dùng các chính sách miễn giảm thuế như <a href="/huu-ich/tich-luy-6.html">IRA, 401(k)</a>. Ông chỉ làm đơn giản theo cách cũ, mua cổ phiếu và <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">đơn vị quỹ đầu tư</a> đều đặn. Qua năm tháng, ông đã thử đủ cách, có tư vấn hoặc không tư vấn, với cổ phiếu, với công ty quản lý quỹ đầu tư, với quỹ index, theo một số trào lưu rồi lại không theo. Một số khoản đầu tư của ông có kết quả tốt, một số thì không. Nhưng nếu đã làm một cách đều đặn và đúng mức thì kết quả sẽ đến. Thứ duy nhất mà ông không đầu tư là mua nhà cho thuê (vì ông đã thấy ngán giao dịch với người.)<br />
+<p>Jim không phải là nhà đầu tư lớn nhất thế giới, nhưng từ thời trẻ ông đã đem tiền tiết kiệm đi đầu tư. Ông không dùng các chính sách miễn giảm thuế như <a href="/huu-ich/tich-luy-6">IRA, 401(k)</a>. Ông chỉ làm đơn giản theo cách cũ, mua cổ phiếu và <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">đơn vị quỹ đầu tư</a> đều đặn. Qua năm tháng, ông đã thử đủ cách, có tư vấn hoặc không tư vấn, với cổ phiếu, với công ty quản lý quỹ đầu tư, với quỹ index, theo một số trào lưu rồi lại không theo. Một số khoản đầu tư của ông có kết quả tốt, một số thì không. Nhưng nếu đã làm một cách đều đặn và đúng mức thì kết quả sẽ đến. Thứ duy nhất mà ông không đầu tư là mua nhà cho thuê (vì ông đã thấy ngán giao dịch với người.)<br />
 Khi tôi hỏi ông “điều gì làm cho việc đầu tư thành công”, ông trả lời ngay không cần suy nghĩ “Hãy cứ làm đều đặn, dù cho việc gì xảy ra” Lợi nhuận từ đầu tư của ông không xuất sắc và được nhiều như nhiều người vẫn có thể làm được. Ông ta chỉ đơn giản là đầu tư dài hạn, không bao giờ bỏ cuộc ngay cả khi thị trường không tốt. Và ông ta không bao giờ rút tiền ra.<br />
 Ông kết luận “<i>Không thay đổi</i> là nguyên nhân chính để chúng tôi không phải lo lắng về tuổi già” Người ta thường bị bao vây bởi suy nghĩ rằng thay đổi sẽ làm họ hạnh phúc hơn. Nhưng họ không thấy rằng không thay đổi cũng đem lại hạnh phúc, mặc dù trễ hơn.<br />
 Đó chính là điều mà bạn không thấy trong các danh sách những việc nên làm hoặc không nên làm.<br />
@@ -360,7 +360,7 @@ data-ad-slot="3830899615">
 <p>Ở Việt Nam cũng đã có những công cụ đầu tư hiện đại được nêu lên trong bài này:</p>
 <ul>
 <li>
-<a href="../dau-tu-co-phieu/quy-dau-tu.html">Quỹ đầu tư</a>: rất đơn giản và dễ dàng để đầu tư vào đây
+<a href="../dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a>: rất đơn giản và dễ dàng để đầu tư vào đây
 </li>
 <li>
 <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">Quỹ hưu trí tự nguyện</a>: để người trả lương thưởng thêm cho người nhận lương, tương tự 401(k) ở Mỹ
@@ -368,7 +368,7 @@ data-ad-slot="3830899615">
 </ul>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132812623890673664" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/400359176796363" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
