--- a/y-kien/bi-mat-doi-tu.html
+++ b/y-kien/bi-mat-doi-tu.html
@@ -173,8 +173,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -196,7 +196,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -261,10 +261,10 @@ data-ad-slot="5275186684">
 <p>Những điều tôi viết dưới-đây thể-hiện cách-suy-nghĩ và cách-sống đơn-giản của tôi.
 </p>
 <p>Tôi thấy người-ta đang ngày-càng mở-rộng quá mức định-nghĩa bí-mật đời-tư.
-Đối-với tôi thì bí-mật đời-tư là giá-trị tài-sản, là các mật-khẩu (để giữ mật-khẩu được an-toàn thì tôi đã có cách như đã viết lại trong <a href="/kinh-nghiem/may-tinh/protect.html">bài sau</a>). Ngoài các thứ đó ra chẳng có gì là bí-mật đời-tư. Tôi đi đâu, đi bằng xe gì, thích gì, ăn gì, gặp ai… đều không cần phải giữ bí-mật. Tại-sao-vậy? Tại-vì tôi là một người bình-thường trong 8 tỷ người trên thế-giới, ai thèm quan-tâm đến thói-quen hàng-ngày của những người như vậy.
+Đối-với tôi thì bí-mật đời-tư là giá-trị tài-sản, là các mật-khẩu (để giữ mật-khẩu được an-toàn thì tôi đã có cách như đã viết lại trong <a href="/kinh-nghiem/may-tinh/protect">bài sau</a>). Ngoài các thứ đó ra chẳng có gì là bí-mật đời-tư. Tôi đi đâu, đi bằng xe gì, thích gì, ăn gì, gặp ai… đều không cần phải giữ bí-mật. Tại-sao-vậy? Tại-vì tôi là một người bình-thường trong 8 tỷ người trên thế-giới, ai thèm quan-tâm đến thói-quen hàng-ngày của những người như vậy.
 </p>
 <p>Nhiều người sợ bị các app trong smartphone thu-thập thói-quen hàng-ngày. Họ cảm-thấy khó-chịu khi thấy quảng-cáo hiện ra trên màn-hình có chút gì hơi liên-quan đến hành-vi của họ. tôi không hiểu nổi quảng-cáo thì làm hại gì mà họ khó-chịu? Nếu họ cần điều đó thì quảng-cáo giúp họ có thêm thông-tin, tốt cho họ. Nếu họ không cần thì quảng-cáo đó không thích-hợp như hàng ngàn quảng-cáo khác mà họ phải thấy mỗi ngày. Việc họ có bị dụ mua món gì đó hay không là lỗi của chính họ chứ không phải lỗi của bên gửi quảng-cáo.
-<br>Việc các app trong smartphone thu-thập thói-quen đi đâu, xem gì của mỗi người không đáng-sợ. Điều đáng-sợ là khi nó thu-thập những gì người-ta gõ vào điện-thoại, trong đó có thể chứa mật-khẩu mà mật-khẩu dẫn tới nhiều bí-mật có giá-trị khác (như trong <a href="/kinh-nghiem/may-tinh/protect.html">bài viết nêu trên</a>).
+<br>Việc các app trong smartphone thu-thập thói-quen đi đâu, xem gì của mỗi người không đáng-sợ. Điều đáng-sợ là khi nó thu-thập những gì người-ta gõ vào điện-thoại, trong đó có thể chứa mật-khẩu mà mật-khẩu dẫn tới nhiều bí-mật có giá-trị khác (như trong <a href="/kinh-nghiem/may-tinh/protect">bài viết nêu trên</a>).
 </p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -295,11 +295,11 @@ data-ad-slot="3830899615">
 <p>Mặc dù suy-nghĩ đơn-giản nhưng tôi không nên sơ-suất để kẻ-gian hại mình. Kẻ-gian thì khá nhiều, và mục-đích của chúng là chiếm-đoạt tài-sản của người khác. Nếu tôi có tài-sản đáng-kể thì sẽ có kẻ tìm cách chiếm-đoạt. Mức-độ đáng-kể rất khác nhau tuỳ theo khả-năng hành-động của từng kẻ-gian, có kẻ chỉ muốn lừa vài chục ngàn đồng, có kẻ chỉ chuyên lừa hàng triệu USD. Người có tài-sản lớn sẽ thu-hút sự-quan-tâm của những kẻ-gian lão-luyện, những kẻ chuyên vạch-ra những kế-hoạch phức-tạp với những chi-tiết rất riêng-tư để chiếm-đoạt tài-sản. Người bình-thường thì chỉ bị những kẻ-gian tầm-thường chú-ý tới, bọn này lặp lại cách lừa nhiều lần với nhiều người nên đều đã được kể lại trong các câu-chuyện cảnh-giác. Người bình-thường nên quan-tâm đến những câu-chuyện cảnh-giác hơn là sợ bị lộ thói-quen hàng-ngày.
 Những vụ lừa-đảo lớn thường thấy ở các mục câu-chuyện cảnh-giác là hệ-thống lừa-đảo đa-cấp, bán đất dự-án giả, giả-danh công-an… Những người bị lừa hàng tỷ đồng trong những vụ đó đâu có bị khai-thác thói-quen hàng-ngày, mà họ bị khai-thác lòng-tham và sự thiếu hiểu-biết.
 </p>
-<p>Một chuyện khác nữa là số điện-thoại cá-nhân. Số điện-thoại cá-nhân ở VN bị những kẻ-tham-tiền bán lại cho cả ngàn người bán-hàng (như đã viết trong <a href="/kinh-nghiem/may-tinh/spam-call.html">bài sau</a>). Đối với người thường thì số điện-thoại cá-nhân bị lộ cũng chỉ làm mất thời-gian chứ không hại gì lắm. Để đỡ bị mất thời-gian phần nào thì mọi người nên tham-gia cộng-đồng dùng chung app để chia-sẻ cho nhau biết những số điện-thoại nào hay làm-phiền (như trong bài viết vừa nêu).
+<p>Một chuyện khác nữa là số điện-thoại cá-nhân. Số điện-thoại cá-nhân ở VN bị những kẻ-tham-tiền bán lại cho cả ngàn người bán-hàng (như đã viết trong <a href="/kinh-nghiem/may-tinh/spam-call">bài sau</a>). Đối với người thường thì số điện-thoại cá-nhân bị lộ cũng chỉ làm mất thời-gian chứ không hại gì lắm. Để đỡ bị mất thời-gian phần nào thì mọi người nên tham-gia cộng-đồng dùng chung app để chia-sẻ cho nhau biết những số điện-thoại nào hay làm-phiền (như trong bài viết vừa nêu).
 </p>
-<p>Không chỉ giữ bí-mật đời-tư với người-ngoài, rất nhiều người bình-thường nhưng lại không đơn-giản, họ có rất nhiều điều để giấu chính những người thân nhất như vợ-chồng họ. Những người như vậy thường phải nói-dối với người-thân. tôi không thể nói-dối vì đầu-óc tôi không đủ chỗ để nhớ hết những kịch-bản không có thật vì vậy tôi chọn nói-thật. Mọi-người trong gia-đình đều biết tôi đang ở đâu vào bất cứ lúc nào, chỉ cần nhìn vào <a href="/kinh-nghiem/may-tinh/googlemaps.html">Google Maps</a> là biết ngay.
+<p>Không chỉ giữ bí-mật đời-tư với người-ngoài, rất nhiều người bình-thường nhưng lại không đơn-giản, họ có rất nhiều điều để giấu chính những người thân nhất như vợ-chồng họ. Những người như vậy thường phải nói-dối với người-thân. tôi không thể nói-dối vì đầu-óc tôi không đủ chỗ để nhớ hết những kịch-bản không có thật vì vậy tôi chọn nói-thật. Mọi-người trong gia-đình đều biết tôi đang ở đâu vào bất cứ lúc nào, chỉ cần nhìn vào <a href="/kinh-nghiem/may-tinh/googlemaps">Google Maps</a> là biết ngay.
 </p>
-<p>Có nhiều trường-hợp bí-mật đời-tư bị tung lên mạng, ví-dụ như ảnh khoả-thân, nội-dung trao-đổi riêng-tư… những trường-hợp đó bắt-nguồn từ việc không bảo-vệ đúng-mức tài-sản số (xem trong <a href="/kinh-nghiem/may-tinh/protect.html">bài viết nêu trên</a>), những app có nguồn-gốc đứng-đắn không gây ra những việc như vậy.
+<p>Có nhiều trường-hợp bí-mật đời-tư bị tung lên mạng, ví-dụ như ảnh khoả-thân, nội-dung trao-đổi riêng-tư… những trường-hợp đó bắt-nguồn từ việc không bảo-vệ đúng-mức tài-sản số (xem trong <a href="/kinh-nghiem/may-tinh/protect">bài viết nêu trên</a>), những app có nguồn-gốc đứng-đắn không gây ra những việc như vậy.
 </p>
 <!-- AMP In-article 1 -->
 <amp-ad
