--- a/y-kien/index.html
+++ b/y-kien/index.html
@@ -160,8 +160,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -221,15 +221,15 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='/y-kien/su-giau-co.html'>Nguồn gốc sự giàu có</a></dt>
-  <dt><a href='/y-kien/bat-ca-hai-tay.html'>Bắt cá hai tay</a></dt>
-  <dt><a href='/y-kien/xa-hoi-thong-tin.html'>Xã-hội thông-tin</a></dt>
-  <dt><a href='/y-kien/bi-mat-doi-tu.html'>Bí-mật đời-tư</a></dt>
-  <dt><a href='/y-kien/dung-hang-viet-nam.html'>Dùng hàng Việt</a></dt>
-  <dt><a href='/y-kien/gia-tra.html'>Giả trá</a></dt>
-  <dt><a href='/y-kien/nhung-cai-nem.html'>Những cái nêm</a></dt>
-  <dt><a href='/y-kien/khac-nguoi.html'>Khác người</a></dt>
-  <dt><a href='/y-kien/da-len-bao.html'>Những ý-kiến đã đăng báo</a></dt>
+  <dt><a href='/y-kien/su-giau-co'>Nguồn gốc sự giàu có</a></dt>
+  <dt><a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a></dt>
+  <dt><a href='/y-kien/xa-hoi-thong-tin'>Xã-hội thông-tin</a></dt>
+  <dt><a href='/y-kien/bi-mat-doi-tu'>Bí-mật đời-tư</a></dt>
+  <dt><a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a></dt>
+  <dt><a href='/y-kien/gia-tra'>Giả trá</a></dt>
+  <dt><a href='/y-kien/nhung-cai-nem'>Những cái nêm</a></dt>
+  <dt><a href='/y-kien/khac-nguoi'>Khác người</a></dt>
+  <dt><a href='/y-kien/da-len-bao'>Những ý-kiến đã đăng báo</a></dt>
 </dl>
   <hr>
 
