--- a/y-kien/dung-hang-viet-nam.html
+++ b/y-kien/dung-hang-viet-nam.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -260,9 +260,9 @@ Trong bài này:</p>
 <p><big><big>Tại sao nên dùng <i>hàng Việt Nam</i>?</big></big><br />
 Vì khi mua một món <i>hàng Việt Nam</i> người mua đã làm lợi cho người Việt Nam nhiều hơn so với khi mua một món hàng ngoại nhập có giá tương đương.<br />
 Nếu mua hàng ngoại nhập thì chỉ có người bán hàng Việt Nam (bán buôn và/hoặc bán lẻ) được hưởng một phần lợi, phần lợi còn lại người sản xuất ở nước ngoài hưởng. Trong khi đó, nếu mua <i>hàng Việt Nam</i> thì còn có thêm những người sản xuất Việt Nam được hưởng lợi.</p>
-<blockquote>Người sản xuất ở đây bao gồm người đầu tư cho việc sản xuất, người tham gia trực tiếp hay gián tiếp sản xuất. <a href="/huu-ich/de-tien-vao-dau.html">Người đầu tư</a> thì được hưởng lợi nhuận trên món hàng. Người tham gia sản xuất thì có được việc làm, được hưởng lương.<br />
+<blockquote>Người sản xuất ở đây bao gồm người đầu tư cho việc sản xuất, người tham gia trực tiếp hay gián tiếp sản xuất. <a href="/huu-ich/de-tien-vao-dau">Người đầu tư</a> thì được hưởng lợi nhuận trên món hàng. Người tham gia sản xuất thì có được việc làm, được hưởng lương.<br />
 Phần lớn người tham gia sản xuất <i>hàng Việt Nam</i> là người Việt Nam, cũng có người nước ngoài nhưng ít hơn nhiều.<br />
-Trong khi đó, có khá nhiều nhà đầu tư nước ngoài sản xuất hàng ở Việt Nam và bán ở Việt Nam, trong trường hợp này thì khoản lợi sẽ không ở lại Việt Nam. Trong xu hướng cổ phần hoá các công ty thì khó phân biệt được một công ty do nhà đầu tư trong nước hay nước ngoài làm chủ vì người Việt Nam cũng có thể trở thành <a href="/huu-ich/de-tien-vao-dau.html">nhà đầu tư</a> của các công ty nước ngoài như là Taya, và ngược lại người nước ngoài cũng có thể trở thành nhà đầu tư của các công ty cổ phần trong nước như là Kinh Đô. Bạn hãy bắt đầu làm nhà đầu tư để được hưởng lợi khi dùng hàng Việt Nam.</blockquote>
+Trong khi đó, có khá nhiều nhà đầu tư nước ngoài sản xuất hàng ở Việt Nam và bán ở Việt Nam, trong trường hợp này thì khoản lợi sẽ không ở lại Việt Nam. Trong xu hướng cổ phần hoá các công ty thì khó phân biệt được một công ty do nhà đầu tư trong nước hay nước ngoài làm chủ vì người Việt Nam cũng có thể trở thành <a href="/huu-ich/de-tien-vao-dau">nhà đầu tư</a> của các công ty nước ngoài như là Taya, và ngược lại người nước ngoài cũng có thể trở thành nhà đầu tư của các công ty cổ phần trong nước như là Kinh Đô. Bạn hãy bắt đầu làm nhà đầu tư để được hưởng lợi khi dùng hàng Việt Nam.</blockquote>
 <p>Như vậy, dùng <i>hàng Việt Nam</i> tức là tạo ra việc làm cho đồng bào của ta, có thể là thân nhân của ta. Ví dụ cụ thể, khi mua hộp bánh Kinh Đô ta làm lợi cho người Việt Nam nhiều hơn khi mua hộp bánh Hongkong hay Mã Lai hay Nhật hay Đan Mạch</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -315,7 +315,7 @@ Vậy để làm gì để tránh những kiểu không biết trên?
 <p>Cuối cùng, những điều trên không ngăn cản ta dùng hàng ngoại nếu giá tiền rẻ hơn mà giá trị sử dụng cao hơn. Và cũng không ngăn ta thỉnh thoảng dùng thử một ít thực phẩm ngoại (nhưng đừng thay thế hẳn thực phẩm trong nước).</p>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="/huu-ich/de-tien-vao-dau.html">Kết quả đầu tư cổ phiếu dài hạn</a>
+<br>* <a href="/huu-ich/de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
