--- a/y-kien/xa-hoi-thong-tin.html
+++ b/y-kien/xa-hoi-thong-tin.html
@@ -326,7 +326,7 @@ data-ad-slot="3830899615">
 
 <p>Thông tin được tạo ra ở cấp cơ sở của các tổ chức và sẽ được tập trung lại trong các hệ thống cơ sở dữ liệu cấp cao hơn. Ví dụ như thông tin về giao dịch với ngân hàng được tạo ra ở các phòng giao dịch, rồi được tập trung về chi nhánh, rồi lại được chuyển tiếp lên ngân hàng chính và cuối cùng là vào hệ thống cơ sở dữ liệu ngành ngân hàng.<br />
 </p>
-<div class="flright"><amp-img alt="Thẻ căn cước thông minh" src="/images/smartIdCard.jpg" width="240" height="116" layout="responsive"></amp-img></a></div>
+<div class="flright"><amp-img alt="Thẻ căn cước thông minh" src="/images/CCCD1.jpg" width="452" height="267" layout="responsive"></amp-img></a></div>
 <p>Mọi việc sửa hay xem thông tin đều thực hiện trên máy tính, hoặc các thiết bị thông tin di động; không cần in ra giấy và đóng dấu công chứng. Để làm được việc này, cần phải dùng một số phương tiện kỹ thuật như <i>chữ ký số</i>, <i>thẻ thông minh</i>, mạng thông tin di động… <br />
 Mọi công dân đều được cấp một bộ chữ ký số theo phương pháp khoá công khai gồm hai phần: phần riêng do công dân tự giữ trong thẻ CMND dạng thẻ thông minh và phần chung để cho mọi người khác dùng để đối chiếu với phần riêng. Tất cả các chữ ký số đều được giữ trong cơ sở dữ liệu tập trung kèm theo thời hạn hiệu lực của chữ ký số đó. Khi công dân làm thất lạc hay bị lộ phần riêng trong bộ chữ ký số thì phải làm thủ tục ngừng hiệu lực của bộ chữ ký số đó và nhận bộ chữ ký số mới. Chữ ký hết hiệu lực vẫn được giữ trong hệ thống cơ sở dữ liệu để sau này xem lại các hồ sơ đã ký trong thời gian hiệu lực của nó. <br />
 Thẻ thông minh là thẻ có mang một máy tính nhỏ bên trong, thẻ SIM của máy điện thoại di động là một loại thẻ thông minh.<br />
