--- a/kinh-nghiem/may-tinh/bat-dau-gnucash.html
+++ b/kinh-nghiem/may-tinh/bat-dau-gnucash.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -313,7 +313,7 @@ data-ad-slot="3830899615">
 </ol>
 <div><amp-img alt="mở sổ GnuCash" src="/images/m%e1%bb%9f-s%e1%bb%956859.png" width="1024" height="768" layout="responsive"></amp-img></div>
 <p>Sau khi nhập hết các tài sản đang có vào file, bạn hãy mở tab báo cáo <i>Bảng tổng kết tài sản</i> để xem lại tất cả tài sản của mình được ghi trong GnuCash.
-<br>Những tài sản tích luỹ lâu năm thì nhập vào file <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html">spreadsheet</a>.</p>
+<br>Những tài sản tích luỹ lâu năm thì nhập vào file <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">spreadsheet</a>.</p>
 <h3>2. Tạo ngân sách</h3>
 <p>Tạo ngân sách bằng cách dùng menu <b>Hành động→Budget→Ngân sách mới</b>, trong tab <i>Ngân sách: Ngân sách không tên</i> mới hiện ra, bấm nút <b>Tuỳ chọn</b>  để đổi tên thành <i>Ngân sách tháng</i>. Nhập các số tiền ứng với các khoản chi 1, 2, 3, 5 vào các tháng trong các tài khoản tương ứng, Các khoản chi 4 và 6 không đều đặn hàng tháng nên chỉ ghi vào ô của tháng dự kiến sẽ chi.</p>
 <div><amp-img alt="ngân sách trong GnuCash" src="/images/budget.png" width="1058" height="772" layout="responsive"></amp-img></div>
