--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -357,7 +357,7 @@ data-ad-slot="3830899615">
 <h1>Các cloud có thể dùng</h1>
 <p>Hiện nay tôi đang dùng <a href="https://my.pcloud.com/#page=register&invite=sxchZHAAiHy" target='_blank'>pCloud</a> làm cloud chính và <a href="http://mega.nz" target='_blank'>Mega</a> làm cloud phụ. pCloud cho dùng miễn phí đến 20GB. Mega cho dùng miễn phí đến 100GB.</p>
 <p>Ngoài ra còn có Google Drive dùng để tạo và giữ những file Doc và Sheet không hạn chế số lượng, Google Photos dùng để giữ ảnh đã được Google nén cũng không hạn chế số lượng. Có thể soạn các file Doc và Sheet trên máy tính với web browser hoặc trên điện thoại với app. Hình chụp bằng Android phone có thể được tự động cất vào Google Photos. Một nhược điểm của Google Drive là không có phần mềm synchronize với máy tính Linux.</p>
-<p>Tôi cũng đã dùng một máy laptop cũ yếu để làm cloud storage server riêng. Các bạn cũng có thể thử theo <a href="privcloudstor.html">cách này</a>.</p>
+<p>Tôi cũng đã dùng một máy laptop cũ yếu để làm cloud storage server riêng. Các bạn cũng có thể thử theo <a href="privcloudstor">cách này</a>.</p>
 
 <h1>Dùng chung file với người khác</h1>
 <p>Tôi có thể dùng chung một phần cloud storage với người khác theo những cách sau:</p>
