--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -380,7 +380,7 @@ data-ad-slot="3830899615">
 <p>Loại tiền mới ra đời có giá trị trao đổi ban đầu rất thấp, tuỳ theo thị hiếu mà nó tăng giá hay là bị lãng quên luôn. Thường thì sau khi fork, những người sở hữu lượng tiền gốc sẽ được tặng một lượng tiền mới.
 <h1>Mặt trái của Bitcoin</h1>
 <h2>Sự đầu cơ</h2>
-<p>Mặc dù nó được gọi là currency, coin nhưng tôi thấy hiện nay nó không phải là một loại tiền vì không tiện để dùng nó mua các thứ khác. Mỗi lần chuyển một lượng Bitcoin dù nhỏ hay lớn đều tốn trung bình 10 phút, lâu hơn việc thanh toán bằng thẻ. Tôi cho rằng Bitcoin là một loại tài sản để <a href="/huu-ich/cach-dau-tu.html">đầu cơ</a>.
+<p>Mặc dù nó được gọi là currency, coin nhưng tôi thấy hiện nay nó không phải là một loại tiền vì không tiện để dùng nó mua các thứ khác. Mỗi lần chuyển một lượng Bitcoin dù nhỏ hay lớn đều tốn trung bình 10 phút, lâu hơn việc thanh toán bằng thẻ. Tôi cho rằng Bitcoin là một loại tài sản để <a href="/huu-ich/cach-dau-tu">đầu cơ</a>.
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -410,7 +410,7 @@ data-ad-slot="3830899615">
 <h2>Hao tốn năng lượng</h2>
 <p>Các máy tính miner tranh nhau xử lý các giao dịch để cuối cùng chỉ có một miner được thưởng Bitcoin mới, việc tranh giành làm hao tốn rất nhiều điện năng. Có người tính rằng hiện nay để xử lý một giao dịch Bitcoin thì hao mất 200kWh điện. Và lượng điện đó ngày càng tăng vì càng có nhiều miner mới tham gia.</p>
 <h1>Một loại tiền mật mã cho mọi người</h1>
-<p>Tôi vừa được biết một đồng tiền mật mã mới gọi là <b>π</b> (Pi). <a href="pi-network.html">Pi Network</a> là một dự án thí nghiệm phát triển một đồng tiền được sử dụng hàng ngày cho hàng tỷ người trên khắp thế giới. Mọi người đều có thể dễ dàng sử dụng π và tham gia làm dịch vụ trong Pi Network.</p>
+<p>Tôi vừa được biết một đồng tiền mật mã mới gọi là <b>π</b> (Pi). <a href="pi-network">Pi Network</a> là một dự án thí nghiệm phát triển một đồng tiền được sử dụng hàng ngày cho hàng tỷ người trên khắp thế giới. Mọi người đều có thể dễ dàng sử dụng π và tham gia làm dịch vụ trong Pi Network.</p>
 <p>Ý tưởng của Pi Network là tạo ra một cộng đồng vô cùng đông người sở hữu π và công nhận giá trị của π.</p>
 <h1>Tài liệu tham khảo</h1>
 * <a href="https://blockgeeks.com/guides/what-is-cryptocurrency/" target='_blank'>What is cryptocurrency</a><br>
